--- a/style.css
+++ b/style.css
@@ -12,32 +12,118 @@ body {
 }
 
 header {
-    height: 50px;
-    border: 5px solid;
-    padding: 5px;
+    padding: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: 1px solid #ddd;
+    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
 }
 
 main {
     padding: 20px;
-    border: 5px solid red;
+    /* border: 5px solid red; */
     flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+/* header */
 
 .app-nav ul {
     display: flex;
     list-style: none;
-    gap: 30px;
+    gap: 35px;
 }
 
 .app-nav li {
     text-align: center;
-    color: rgb(172, 172, 172);
+    color: #7a7a8a;
+    font-size: 14px;
+}
+.app-nav li.active, .app-nav li:hover {
+    color: rgb(29, 134, 255);
 }
 
 .app-nav li i {
     display: block;
     margin-bottom: 4px;
+    font-size: 22px;
+}
+
+.search-bar {
+    display: flex;
+    gap: 0 15px;
+}
+.nav-arrows {
+    display: flex;
+    gap: 0 4px;
+}
+
+.icon-shape {
+    background-color: #ededef;
+    color: #7a7a8a;
+    border-radius: 8px;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+}
+.input-shape {
+    background-color: #ededef;
+    color: #7a7a8a;
+    border-radius: 8px;
+    height: 30px;
+    line-height: 30px;
+    border: none;
+    padding-left: 30px;
+    width: 150px;
+}
+
+.input-wrapper input:focus {
+    padding-left: 10px;
+}
+.input-wrapper input:focus + i {
+    display: none;
+}
+
+.input-wrapper {
+    position: relative;
+}
+.input-wrapper i {
+    position: absolute;
+    line-height: 30px;
+    left: 10px;
+    top: 0;
+    color: #7a7a8a;
+}
+
+.profile-avatar {
+    color: white;
+    background-color: rgb(29, 134, 255);
+}
+
+
+/* main */
+
+.content-wrapper {
+    border: 2px solid #ffa800;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 750px;
+    flex-grow: 1
+}
+
+.icons-wrapper {
+    width: 270px;
+    min-height: 250px;
+    border: 2px dashed red;
+}
+
+.calls-card-wrapper {
+    min-height: 430px;
+    width: 330px;
+    border: 2px dashed red;
 }
