--- a/style.css
+++ b/style.css
@@ -20,6 +20,15 @@ header {
     box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
 }
 
+footer {
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+}
+
 main {
     padding: 20px;
     /* border: 5px solid red; */
@@ -180,4 +189,23 @@ main {
     padding-top: 140px;
     text-align: center;
     color: #7a7a8a
+}
+
+@media screen and (max-width: 900px) {
+    .calls-card-wrapper{
+        display: none;
+    }
+    .content-wrapper {
+        flex-grow: 0;
+    }
+    .search-bar, .profile-bar {
+        display: none;
+    }
+    header {
+        justify-content: center;
+    }
+    body {
+        flex-direction: column-reverse;
+    }
+
 }
